<resources>
    <string name="app_name">Pagan Music Sequencer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="label_choose_percussion">%1$d: %2$s</string>
    <string name="label_choose_instrument">%1$02d: %2$s</string>
    <string name="label_choose_instrument_percussion">!%1$02d: %2$s</string>
    <string name="label_shortcut_scrollbar">Jump to beat %1$d / %2$d</string>
    <string name="label_shortcut">Jump to beat</string>
    <string name="copied_title">%1$s (Copy)</string>
    <string name="dlg_tuning">Tuning</string>
    <string name="pfx_subtract">-</string>
    <string name="pfx_add">+</string>
    <string name="absolute_label">|n|</string>
    <string name="main_fragment_label"></string>
    <string name="settings_fragment_label">Pagan Settings</string>
    <string name="front_fragment_label">@string/app_name</string>
    <string name="license_fragment_label">License</string>
    <string name="percussion_label"></string>
    <string name="cd_insert">Insert subdivision</string>
    <string name="cd_split">Split this beat or subdivision</string>
    <string name="cd_remove">Remove this subdivision</string>
    <string name="cd_unset">Unset this subdivision</string>
    <string name="url_fluid">https://archive.org/download/fluidr3-gm-gs/FluidR3_GM_GS.sf2</string>
    <string name="warning_nosoundfont_a">A soundfont is needed for playback.</string>
    <string name="warning_nosoundfont_b">Download Fluidr3_GM_GS.sf2 here:</string>
    <string name="fluid_download">Download Fluid3 Soundfont</string>
    <string name="warning_nosoundfont_c">You can import and select soundfonts from the settings menu.</string>
    <string name="url_git">https://github.com/quintinfsmith/pagan</string>
    <string name="url_issues">https://github.com/quintinfsmith/pagan/issues</string>
    <string name="url_manual">https://burnsomni.net/manual/pagan</string>
    <string name="line_label_first">%1$d</string>
    <string name="line_label_first_percussion">!%1$d</string>
    <string name="line_label_second">%1$d</string>
    <string name="line_label_second_percussion">%1$d</string>
    <string name="btn_landing_new">New Project</string>
    <string name="btn_landing_import">Import</string>
    <string name="btn_landing_load">Load Project</string>
    <string name="btn_landing_settings">Settings</string>
    <string name="btn_landing_most_recent">Open Last Project</string>
    <string name="label_settings_playback_quality">Playback Quality</string>
    <string name="label_settings_playback_stereo">Playback in Stereo</string>
    <string name="label_settings_playback_limit_samples">Playback: Limit 1 sample per note</string>
    <string name="label_settings_relative">Relative Input Mode</string>
    <string name="label_settings_sf">Active Soundfont</string>
    <string name="label_settings_sfs">Active Soundfonts:</string>
    <string name="label_settings_same_line_release">Clip consecutive samples</string>
    <string name="label_settings_note_memory">Indicate latest octave &amp; offset input</string>
    <string name="label_settings_normalize_beat_widths">Normalize beat width</string>
    <string name="label_settings_allow_multiple_soundfonts">Use multiple soundfonts</string>
    <string name="label_settings_volume_ramp">Volume Ramp</string>
    <string name="dialog_settings_volume_ramp">Volume Ramp: x</string>
    <string name="btn_settings_sfmute">Mute</string>
    <string name="unload_soundfont">Unload Soundfont</string>
    <string name="use_default_ramp">Default</string>
    <string name="btn_cfg_change_name">Change Project Name…</string>
    <string name="label_tuning">Tuning</string>
    <string name="btn_cfg_add_channel">Add Instrument Channel</string>
    <string name="btn_cfg_save">Save</string>
    <string name="btn_cfg_copy">Copy</string>
    <string name="btn_cfg_delete">Delete</string>
    <string name="btn_cfg_export">Export</string>
    <string name="dlg_delete_title">Really Delete %1s?</string>
    <string name="feedback_delete">Deleted Project</string>
    <string name="config_file_not_found">Configuration can\'t be accessed</string>
    <string name="label_manual">Manual</string>
    <string name="label_issues_location">Issue Tracker</string>
    <string name="suggestions_description">Issues or Feature Requests</string>
    <string name="label_source_code">Source</string>
    <string name="feedback_on_copy">Now working on copy</string>
    <string name="default_imported_midi_title">Imported Midi</string>
    <string name="feedback_exported_to_midi">Exported to midi</string>
    <string name="dialog_save_warning_title">Save Current Project?</string>
    <string name="dlg_confirm">Yes</string>
    <string name="dlg_decline">No</string>
    <string name="dlg_set_tempo">Set Tempo (BPM)</string>
    <string name="dlg_set_radix">Radix</string>
    <string name="dlg_set_reverb">Set Reverb Wetness (%)</string>
    <string name="dlg_change_name">Change Project Name</string>
    <string name="feedback_project_saved">Project Saved</string>
    <string name="dlg_transpose">Transpose</string>
    <string name="dlg_insert_beats">Insert Beats</string>
    <string name="feedback_import_fail">Corrupt Project File</string>
    <string name="feedback_file_not_found">File not Found</string>
    <string name="feedback_midi_fail">Invalid MIDI</string>
    <string name="feedback_rm_lastbeat">Can\'t remove only beat</string>
    <string name="dlg_remove_beats">Remove Beats</string>
    <string name="dlg_remove_lines">Remove Lines</string>
    <string name="dlg_insert_lines">Insert Lines</string>
    <string name="dlg_insert_channels">Insert Channels</string>
    <string name="dlg_split">Split</string>
    <string name="dlg_insert">Insert</string>
    <string name="feedback_mixed_copy">Can\'t cross percussion and non-percussion</string>
    <string name="feedback_bad_range">Bad Range</string>
    <string name="feedback_exported">Exported</string>
    <string name="feedback_invalid_sf2_file">Invalid sf2 File</string>
    <string name="no_soundfont">No Soundfont</string>
    <string name="load_soundfont">Load Soundfont…</string>
    <string name="option_import_soundfont">Import…</string>
    <string name="unknown_instrument">Unknown @ %1s</string>
    <string name="desc_column_label">Column %1d</string>
    <string name="dropdown_choose_percussion">Choose Percussion</string>
    <string name="dropdown_choose_instrument">Choose Instrument</string>
    <string name="label_copy_beat">Tap to copy.\n*Tap-and-hold* to select.</string>
    <string name="label_move_beat">Tap to move.\n*Tap-and-hold* to select.</string>
    <string name="label_merge_beat">Tap to merge.\n*Tap-and-hold* to select.</string>
    <string name="label_copy_ctl">Copy</string>
    <string name="label_move_ctl">Move</string>
    <string name="reticle_msg_import_project">Importing Project…</string>
    <string name="reticle_msg_new">Setting up new project…</string>
    <string name="reticle_msg_load">Loading…</string>
    <string name="reticle_msg_import_midi">Importing Midi File…</string>
    <string name="reticle_msg_start_playback">Starting Playback…</string>
    <string name="dlg_export">Export Project to…</string>
    <string name="export_option_midi">MIDI File</string>
    <string name="export_option_wav">WAV File</string>
    <string name="export_option_json">JSON File</string>
    <string name="drum_not_found">Drum Not Found</string>
    <string name="dlg_duration">Duration</string>
    <string name="export_cancelled">Export Cancelled</string>
    <string name="export_wav_file_progress">Export Wav File Progress</string>
    <string name="playback_control">Playback Controls</string>
    <string name="export_wav_notification_description">Converting Pagan project to .wav</string>
    <string name="export_wav_notification_title">Exporting %1$s</string>
    <string name="export_wav_feedback">Exporting to wav</string>
    <string name="export_wav_feedback_complete">Done Export</string>
    <string name="export_multi_wav_feedback">Exporting C:%1$d L:%2$d to wav</string>
    <string name="export_wav_notification_complete">Done</string>
    <string name="jump_to_section">Jump to section…</string>
    <string name="dialog_adjust_selection">Adjust Selection</string>
    <string name="dialog_remove_soundfont_title">Choose Soundfont to Remove</string>
    <string name="dialog_select_soundfont">Select Soundfont</string>
    <string name="dialog_remove_soundfont_text">Really Delete %1$s?</string>
    <string name="loading_new_soundfont">Loading New Soundfont…</string>
    <string name="title_msg_buffering">BUFFERING…</string>
    <string name="label_duration">x%1$d</string>
    <string name="label_short_percussion">!%1$02d</string>
    <string name="config_label_sample_rate">%1$dHz</string>
    <string name="label_export_progress">%1$d%%</string>
    <string name="label_export_progress_no_value">Exporting...</string>
    <string name="label_tuning_index">%1$02d:</string>
    <string name="dlg_set_volume">Set Volume(%)</string>
    <string name="dlg_set_velocity">Set Velocity(%)</string>
    <string name="untitled_opus">Untitled</string>
    <string name="error_caught_from_keyboard_input">Error caught from keyboard input: %1$s</string>
    <string name="playback_failed">Playback Failed</string>
    <string name="delete_failed">Failed to delete project</string>
    <string name="invalid_soundfont">Invalid Soundfont</string>
    <string name="std_percussion_swap">Can\'t swap percussion with other instruments</string>
    <string name="corrupted_project">Corrupted Project</string>
    <string name="untitled_op">Op. %1$s</string>
    <string name="repeat_selection">Repeat Selection</string>
    <string name="dialog_transition">Transition</string>
    <string name="show_line_controls">Show Line Effects...</string>
    <string name="show_channel_controls">Show Channel Effects...</string>
    <string name="show_global_controls">Show Global Effects...</string>
    <string name="delete_project">Delete</string>
    <string name="details_load_project">Load</string>
    <string name="menu_item_new_project">New Project</string>
    <string name="menu_item_load_project">Load Project</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_debug">Debug</string>
    <string name="menu_item_undo">undo</string>
    <string name="menu_item_redo">redo</string>
    <string name="menu_item_playpause">Play/Pause</string>
    <string name="menu_item_playpause_midi">Play / Pause Midi output</string>
    <string name="btn_split">Split</string>
    <string name="btn_insert">Insert</string>
    <string name="btn_landing_about">About</string>
    <string name="cd_channel_volume">Toggle Volume Control</string>
    <string name="cd_remove_channel">Remove Channel</string>
    <string name="cd_insert_channel">Add Channel</string>
    <string name="cd_show_effect_controls">Show Effect Controls</string>
    <string name="cd_remove_line">Remove Line</string>
    <string name="cd_insert_line">Insert Line</string>
    <string name="cd_set_percussion_instrument">Set Percussion Instrument</string>
    <string name="cd_set_event_duration">Set Event Duration</string>
    <string name="cd_remove_beat">Remove Beat</string>
    <string name="cd_insert_beat">Insert Beat</string>
    <string name="cd_line_mute">Mute and unmute this line</string>
    <string name="support_email">qfs.pagan@pm.me</string>
    <string name="cd_adjust_selection">Adjust Selection</string>
    <string name="cd_mark_section">Tag Section</string>
    <string name="cd_remove_section_mark">Remove Section Tag</string>
    <string name="fira_sans_license_blurb">Fira Sans &amp; Fira Code bundled under the terms of the SIL Open Font License.</string>
</resources>