<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llContextCol"
    android:layout_marginBottom="@dimen/primary_contextmenu_padding_top"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        style="@style/contextmenu_button"
        app:icon="@drawable/tag"
        android:id="@+id/btnTag"
        android:contentDescription="@string/cd_mark_section"/>

    <Space
        android:layout_width="2dp"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/contextmenu_button"
        app:icon="@drawable/untag"
        android:id="@+id/btnUntag"
        android:contentDescription="@string/cd_remove_section_mark"/>

    <Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/contextmenu_button"
        app:icon="@drawable/adjust"
        android:id="@+id/btnAdjust"
        android:contentDescription="@string/cd_adjust_selection"/>

    <Space
        android:layout_width="2dp"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/contextmenu_button"
        android:id="@+id/btnRemoveBeat"
        app:icon="@drawable/remove_beat"
        android:contentDescription="@string/cd_remove_beat" />

    <Space
        android:layout_width="2dp"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/contextmenu_button"
        android:id="@+id/btnInsertBeat"
        app:icon="@drawable/insert_beat"
        android:contentDescription="@string/cd_insert_beat" />
</LinearLayout>
