<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContextCell"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"/>

    <Button
        android:id="@+id/btnSplit"
        style="@style/contextmenu_button"
        android:contentDescription="@string/cd_split"
        app:icon="@drawable/split"/>

    <Space
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_width="0dp"/>

    <Button
        android:id="@+id/btnInsert"
        style="@style/contextmenu_button"
        android:contentDescription="@string/cd_insert"
        app:icon="@drawable/insert" />

    <Space
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_width="0dp"/>

    <Button
        android:id="@+id/btnRemove"
        style="@style/contextmenu_button"
        android:contentDescription="@string/cd_remove"
        app:icon="@drawable/remove" />

    <Space
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_width="0dp"/>

    <Button
        android:id="@+id/btnDuration"
        android:padding="0dp"
        android:lines="1"
        style="@style/contextmenu_button"
        android:contentDescription="@string/cd_set_event_duration"
        android:text="" />

    <Space
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_width="0dp"/>

    <Button
        android:id="@+id/btnUnset"
        style="@style/contextmenu_button"
        android:contentDescription="@string/cd_unset"
        app:icon="@drawable/unset" />

    <Space
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"/>

</LinearLayout>