<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FrontFragment">

    <fragment
        android:id="@+id/EditorFragment"
        android:name="com.qfs.pagan.EditorFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main" >

        <action
            android:id="@+id/action_EditorFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment"/>
    </fragment>


    <fragment
        android:id="@+id/FrontFragment"
        android:name="com.qfs.pagan.LandingPageFragment"
        android:label="@string/front_fragment_label"
        tools:layout="@layout/fragment_landing">

        <action
            android:id="@+id/action_FrontFragment_to_EditorFragment"
            app:destination="@id/EditorFragment"
            app:popUpTo="@id/FrontFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_FrontFragment_to_LicenseFragment"
            app:destination="@id/LicenseFragment" />
        <action
            android:id="@+id/action_FrontFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/LicenseFragment"
        android:name="com.qfs.pagan.LicenseFragment"
        android:label="@string/license_fragment_label"
        tools:layout="@layout/fragment_license">
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.qfs.pagan.GlobalSettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_global_settings">
    </fragment>

</navigation>