<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContextRow"
    android:orientation="horizontal"
    style="@style/contextmenu_primary_inner">
        <Button
            style="@style/contextmenu_button"
            android:visibility="gone"
            android:id="@+id/btnToggleChannelCtl"
            app:icon="@drawable/icon_ctl"
            android:contentDescription="@string/cd_channel_volume"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <Button
            style="@style/contextmenu_button"
            app:icon="@drawable/icon_adjust"
            android:id="@+id/btnAdjust"
            android:contentDescription="@string/cd_adjust_selection"/>

        <Space
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <Button
            style="@style/contextmenu_button"
            android:id="@+id/btnRemoveLine"
            app:icon="@drawable/icon_remove_channel"
            android:contentDescription="@string/cd_remove_channel"/>

        <Space
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <Button
            style="@style/contextmenu_button"
            android:id="@+id/btnInsertPercussionChannel"
            app:icon="@drawable/icon_add_channel_kit"
            android:contentDescription="@string/cd_insert_channel"/>

        <Space
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <Button
            style="@style/contextmenu_button"
            android:id="@+id/btnInsertLine"
            app:icon="@drawable/icon_add_channel"
            android:contentDescription="@string/cd_insert_channel"/>
</LinearLayout>
