<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            style="@style/about_link"
            android:id="@+id/linkManual"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/about_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_manual" />

            <TextView
                style="@style/about_link_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/url_manual" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            style="@style/about_link"
            android:id="@+id/linkSource"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/about_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_source_code" />

            <TextView
                style="@style/about_link_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/url_git" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            style="@style/about_link"
            android:id="@+id/linkIssues"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/about_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_issues_location" />

            <TextView
                style="@style/about_link_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/url_issues" />
        </LinearLayout>

        <View
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_width="match_parent"
            android:background="@color/main_fg"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:id="@+id/linkSuggestions"
            style="@style/about_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">
            <TextView
                style="@style/about_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/suggestions_description" />

            <TextView
                style="@style/about_link_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/support_email" />
        </LinearLayout>

        <View
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_width="match_parent"
            android:background="@color/main_fg"
            android:layout_height="1dp"/>

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fira_sans_license_blurb"/>
        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"/>

        <View
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_width="match_parent"
            android:background="@color/main_fg"
            android:layout_height="1dp"/>

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/tvLicenseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center"
            android:text=""
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>
