<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llSFWarningLanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/soundfont_warning_frame"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/soundfont_warning_background"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning_nosoundfont"
                android:textColor="?attr/soundfont_warning_text" />

            <TextView
                android:clickable="true"
                android:id="@+id/tvFluidUrlLanding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url_fluid"
                android:textColor="?attr/soundfont_warning_link"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning_nosoundfont_2"
                android:textColor="?attr/soundfont_warning_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:clickable="true"
            android:id="@+id/btnMostRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_most_recent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_padding" />

        <Button
            android:clickable="true"
            android:id="@+id/btnFrontNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_new"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_padding" />

        <Button
            android:clickable="true"
            android:id="@+id/btnFrontLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_load"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_padding" />

        <Button
            android:clickable="true"
            android:id="@+id/btnFrontImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_import"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_padding" />

        <Button
            android:clickable="true"
            android:id="@+id/btnFrontSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_settings"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_padding" />

        <Button
            android:clickable="true"
            android:id="@+id/btnFrontAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_landing_about"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
