<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContextRow"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btnToggleChannelCtl"
            android:theme="@style/icon_button"
            app:srcCompat="@drawable/ctl"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button_height"
            android:contentDescription="@string/cd_show_effect_controls"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button_height">
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/btnMuteLine"
                    android:theme="@style/icon_button"
                    app:srcCompat="@drawable/mute"
                    android:layout_width="@dimen/icon_button_width_b"
                    android:layout_height="@dimen/icon_button_height_b"
                    android:contentDescription="@string/cd_line_mute"/>
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
        </LinearLayout>


        <Space
            android:id="@+id/spacer"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp" />


        <TextView
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:theme="@style/button"
            android:id="@+id/btnChoosePercussion"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_button_height"
            android:textAlignment="center"
            android:contentDescription="@string/cd_set_percussion_instrument"
            android:text="" />

        <ImageView
            android:id="@+id/btnRemoveLine"
            android:theme="@style/icon_button"
            app:srcCompat="@drawable/remove_line"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button_height"
            android:contentDescription="@string/cd_remove_line"/>

        <ImageView
            android:theme="@style/icon_button"
            android:id="@+id/btnInsertLine"
            app:srcCompat="@drawable/insert_line"
            android:layout_width="@dimen/icon_button_width"
            android:layout_height="@dimen/icon_button_height"
            android:contentDescription="@string/cd_insert_line"/>

</LinearLayout>
